--- a/U2-D5/base_di_partenza/assets/css/style.css
+++ b/U2-D5/base_di_partenza/assets/css/style.css
@@ -10,14 +10,36 @@ body {
 }
 header {
   background-color: #ffc017;
+  padding-top: 20px;
+
+  margin-inline: auto;
+}
+hr {
+  display: block;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  unicode-bidi: isolate;
+  overflow: hidden;
+  border-style: inset;
+  border-width: 1px;
 }
 nav {
+  background-color: #ffc017;
   max-width: 900px;
   padding-top: 10px;
   margin-inline: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  border-bottom: 1px solid black;
+  padding-bottom: 5px;
 }
 nav ul {
   display: flex;
@@ -126,6 +148,8 @@ h4 {
   margin-inline: auto;
   display: flex;
   column-gap: 20px;
+  align-items: start;
+  /* position: relative; */
 }
 article {
   display: flex;
@@ -140,6 +164,8 @@ h2 {
 /* aside */
 aside {
   max-width: 350px;
+  position: sticky;
+  top: 50px;
 }
 aside h5 {
   padding-left: 5px;
@@ -155,4 +181,9 @@ aside h5 {
   font-size: 0.8rem;
   padding: 6px;
   padding-inline: 14px;
+}
+.container-dicover {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
 }
